# PageYard

./: .env.example  .gitignore  README.md  input.css  package-lock.json  package.json  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_managers.py
accounts/templates/: profile.html
accounts/templates/socialaccount/snippets/: provider_list.html
core/: settings.py  urls.py
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_remove_note_last_updated_at_note_updated_at.py  0003_group_created_at_group_updated_at_and_more.py  0004_group_created_by.py
notes/templates/notes/: base.html  dashboard.html  dashboard_base.html  groups.html  home_page.html  note_detail.html  note_edit.html  notes_list.html  notes_search.html  partial_group_item.html  partial_group_list.html  partial_note_item.html  partial_notes_list.html
notes/templates/notes/partials/: partial_group_item.html  partial_group_list.html  partial_note_item.html  partial_notes_list.html  partial_star_button.html  toast.html
static/css/: main.css
