[project]
name = "notes-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2.8",
    "django-allauth-ui>=1.8.1",
    "django-allauth[socialaccount]>=65.13.0",
    "django-htmx>=1.27.0",
    "django-widget-tweaks>=1.5.1",
    "dotenv>=0.9.9",
    "gunicorn>=25.1.0",
    "markdown>=3.10",
    "nh3>=0.3.2",
    "psycopg2>=2.9.11",
    "slippers>=0.6.2",
    "whitenoise>=6.12.0",
]
